Remove padding, no longer aligned with gap concepts

--- a/ExtraDry/ExtraDry.Blazor/Components/Dry/Forms/DryForm.razor.css
+++ b/ExtraDry/ExtraDry.Blazor/Components/Dry/Forms/DryForm.razor.css
@@ -29,9 +29,8 @@
     Default layout paddings and gaps for form and groups.
   */
   form {
-    padding: 10px;
     gap: 5px;
-  }
+  }   
 
     /*
     Style for the header of the form.
